...
        android:id="@+id/swipe_to_refresh"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_posts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />


    </android.support.v4.widget.SwipeRefreshLayout>
...
