<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_timeline"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_timeline" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/title_add_post" />

</menu>

