...
                android:layout_marginTop="5dp"

                />
        </LinearLayout>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="Username"
            android:singleLine="true"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="Password"
            android:singleLine="true"

            />

        <Button
            android:id="@+id/log_in"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="go"
            android:textColor="#FFFF"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/redoval"
            android:layout_marginTop="15dp"

            />
...
